# container-maker-spec

./: .gitignore  README.md  build.py  pyproject.toml
container_maker_spec/: service_pb2.py  service_pb2_grpc.py  types_pb2.py
spec/: service.proto  types.proto
