[tool.poetry]
name = "container-maker-spec"
version = "0.1.0"
description = ""
authors = ["Namah Shrestha"]
readme = "README.md"
license = "AGPL-3.0-or-later"
packages = [{include="container_maker_spec"}]
include = ["container_maker_spec/**/*"]

[tool.poetry.dependencies]
python = ">=3.8,<3.12"
protobuf = "^5.29.0"
grpcio = "^1.70.0"
grpcio-tools = "^1.70.0"

[build-system]
requires = ["poetry-core", "grpcio-tools==1.70.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.build]
generate-setup-file = false
script = "build.py"
